--- a/app/src/main/res/drawable/send_button_background.xml
+++ b/app/src/main/res/drawable/send_button_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/chatBubbleLeft"/>
-    <corners android:topLeftRadius="20dp" android:topRightRadius="20dp" android:bottomRightRadius="20dp" android:bottomLeftRadius="20dp"/>
-    <padding android:left="5dip" android:top="5dip" android:right="5dip" android:bottom="5dip" />
+    <solid android:color="@color/colorAccent"/>
+    <corners android:topLeftRadius="20dp" android:topRightRadius="0dp" android:bottomRightRadius="0dp" android:bottomLeftRadius="20dp"/>
+    <padding android:left="10dip" android:top="5dip" android:right="10dip" android:bottom="5dip" />
 </shape>
