--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -9,6 +9,7 @@
     <LinearLayout
             android:id="@+id/contentView"
             android:orientation="vertical"
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -82,21 +83,51 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <TextView
+                <LinearLayout
                         android:layout_marginTop="10dp"
                         android:layout_marginLeft="10dp"
-                        android:textColor="@color/colorPrimary"
-                        android:text="Movies you might like"
-                        android:textSize="18sp"
-                        android:fontFamily="@font/prompt_semibold"
-                        android:layout_weight="1"
+                        android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content">
 
-                <android.support.v7.widget.RecyclerView
-                        android:id="@+id/relateMovieRecycleView"
+                    <TextView
+                            android:textColor="@color/colorPrimary"
+                            android:text="Movies you might like"
+                            android:textSize="18sp"
+                            android:fontFamily="@font/prompt_semibold"
+                            android:layout_weight="1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                    <TextView
+                            android:id="@+id/viewMoreTextView"
+                            android:layout_marginBottom="5dp"
+                            android:background="@drawable/send_button_background"
+                            android:text="See more"
+                            android:fontFamily="@font/prompt"
+                            android:layout_weight="0"
+                            android:gravity="center"
+                            android:textSize="13sp"
+                            android:textColor="@android:color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <FrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content">
+
+                    <ProgressBar
+                            android:id="@+id/relateMovieProgress"
+                            android:layout_gravity="center_horizontal|center_vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    <android.support.v7.widget.RecyclerView
+                            android:id="@+id/relateMovieRecycleView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+                </FrameLayout>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
